# ShipLab

./: .gitignore  .mcp.json  CMakeLists.txt  Dockerfile  README.md
.claude/skills/: cuda_performance_expert.md
proto/: simulation.proto
python/: client_gui.py  simulation_pb2.py  simulation_pb2_grpc.py
python/tools/: gpu_mcp.py
scripts/: docker_run.sh  report.sh  run.sh
src/cli/: main.cu
src/core/: GpuOperatorOptimized_v2.cu  OperatorTags.h
src/io/: MemoryMappedFileReader.h
src/server/: main_server.cpp
